mash: Fix crash when clicking on the shelf overflow icon

Under mus/mash, each widget has its own RootWindow. Only the RootWindow for
the display has a RootWindowController. OverflowBubble was attempting to look
up the display's RootWindowController from the shelf's widget, which doesn't
have one.

There is a separate problem that prevents the overflow bubble from showing
(it immediately closes due to a focus/activation issue) but with this CL at
least we don't crash on click.

We'll need to audit other callers of RootWindowController::ForWindow() to
ensure they are safe; I'll file a bug for that.

BUG=595851
TEST=Run mash, launch some apps, resize window to get overflow icon to show,
click icon, no crash.

Review-Url: https://codereview.chromium.org/1929203002
Cr-Commit-Position: refs/heads/master@{#390690}

Former-commit-id: 2a5ffa2195e262691da5d7bab4ac1364622cfcde